# testing_copilot_agent

./: .gitignore  Dockerfile  README.md  api.py  app.py  auth.py  config.py  docker-compose.yml  mcp_api_keys.json  models.py  pyproject.toml  requirements.txt  run.py  test_dashboard_scenario.py  test_timezone_fix.py  test_timezone_issue.py
.github/: copilot-instructions.md
app/: __init__.py  forms.py
app/models/: __init__.py  todo.py  user.py
app/routes/: __init__.py  api.py  auth.py  main.py
app/static/css/: cyberpunk.css  ghibli.css
app/static/js/: app.js
app/templates/: base.html  dashboard.html  index.html  todo_form.html
app/templates/auth/: login.html  register.html
mcp_server/: EXAMPLES.md  README.md  __init__.py  auth.py  config.py  database.py  example_config.json  manage_keys.py  run_server.py  server.py  validate.py
static/css/: style.css
static/js/: app.js
templates/: 404.html  500.html  base.html  index.html  login.html  register.html
tests/: test_basic.py  test_datetime_validation.py  test_mcp_server.py
